--- a/index.html
+++ b/index.html
@@ -9,15 +9,48 @@
             height: 100%;
             margin: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: #00A6A6;
             font-family: Arial, sans-serif;
         }
+
+        .header {
+            color: white;
+            font-size: 24px;
+            margin-top: 10px;
+        }
+
+        .counter-panel {
+            width: 200px;
+            height: 50px;
+            background-color: #E1F3F8;
+            border-radius: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            margin-bottom: 10px;
+        }
+
+        .counter {
+            font-size: 24px;
+            font-weight: bold;
+            color: #FFDF00; /* Золотой цвет */
+            display: flex;
+            align-items: center;
+        }
+
+        .counter::before {
+            content: "💰";
+            margin-right: 8px;
+        }
+
         .card {
             width: 300px;
             height: 180px;
-            background-color: #007bff;
+            background-color: #42C2C1;
             border-radius: 12px;
             display: flex;
             justify-content: center;
@@ -26,26 +59,72 @@
             cursor: pointer;
             position: relative;
         }
+
         .card:active {
             transform: scale(0.98);
         }
-        .counter {
+
+        .coin {
             position: absolute;
-            top: 10px;
-            right: 10px;
-            color: white;
+            font-size: 24px;
+            animation: fly 1s ease-out forwards;
+        }
+
+        @keyframes fly {
+            0% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+            100% {
+                opacity: 0;
+                transform: translateY(-100px);
+            }
+        }
+
+        .footer {
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+            padding: 20px;
+            background-color: #E1F3F8;
+        }
+
+        .footer-icon {
+            text-align: center;
+            color: #FF66B2;
             font-size: 24px;
         }
-        .card:before {
-            content: "💳";
-            font-size: 50px;
-            color: white;
+
+        .footer-icon a {
+            color: inherit;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-    <div class="card" id="card">
+    <div class="header">Make More Money</div>
+
+    <div class="counter-panel">
         <div class="counter" id="counter">0</div>
+    </div>
+
+    <div class="card" id="card"></div>
+
+    <div class="footer">
+        <div class="footer-icon">
+            🔑<br>Keys
+        </div>
+        <div class="footer-icon">
+            👥<br>Friends
+        </div>
+        <div class="footer-icon">
+            🏆<br>Quests
+        </div>
+        <div class="footer-icon">
+            <a href="https://t.me/weldmoney" target="_blank">
+                ➕<br>Join
+            </a>
+        </div>
     </div>
 
     <script>
@@ -53,9 +132,36 @@
         const card = document.getElementById('card');
         const counter = document.getElementById('counter');
 
-        card.addEventListener('click', () => {
+        card.addEventListener('click', (e) => {
             count++;
             counter.textContent = count;
+
+            // Создание анимации монетки
+            const coin = document.createElement('div');
+            coin.textContent = "+1";
+            coin.classList.add('coin');
+            coin.style.left = `${e.clientX - card.getBoundingClientRect().left}px`;
+            coin.style.top = `${e.clientY - card.getBoundingClientRect().top}px`;
+
+            card.appendChild(coin);
+
+            // Удаление монетки после анимации
+            setTimeout(() => {
+                coin.remove();
+            }, 1000);
+
+            // Вибрация устройства при нажатии
+            if (window.navigator.vibrate) {
+                window.navigator.vibrate(50);
+            }
+        });
+
+        // Добавление обработки нажатий на иконки
+        const footerIcons = document.querySelectorAll('.footer-icon:not(:last-child)');
+        footerIcons.forEach(icon => {
+            icon.addEventListener('click', () => {
+                alert('We are working on it');
+            });
         });
     </script>
 </body>
