--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     <!-- Карточка с изображением -->
     <div class="card" id="card">
-        <img src="https://drive.google.com/file/d/1AwxFDnpewqWKfB9KY0HFYNpRIKkJQ_3J/view?usp=sharing" alt="Card Image">
+        <img src="https://drive.google.com/uc?export=view&id=1AwxFDnpewqWKfB9KY0HFYNpRIKkJQ_3J" alt="Card Image">
     </div>
 
     <!-- Футер с иконками -->
