--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 
     <!-- Карточка с изображением -->
     <div class="card" id="card">
-        <img src="https://raw.githubusercontent.com/IL-code/CardWE/main/weld_money_card_mc-01%202.png" alt="Card Image">
+<img src="https://raw.githubusercontent.com/IL-code/CardWE/main/weld_money_card_mc.png" alt="Card Image">
+
     </div>
 
     <!-- Футер с иконками -->
